src/components/Modal/Modal.css
.layout {
  position: absolute;
  top: 0;
  left: 0;
  
  width: 100vw;
  height: 100vh;

  background-color: #00000070;
}

.modal {
  position: absolute;
  top: 0;
  left: 0;

  width: 100vw;
  height: 100vh;

  background-color: #ffffff;
  border-radius: 10px;
  text-align: center;
}

.modal__header {
  margin: 90px 0 0 0;

  letter-spacing: 1.1px;
  font-size: 25px;
  color: #3b4363;
  text-transform: uppercase;
  font-weight: 700;
}

.modal__rules {
  margin: 70px 0 30px 0;

  width: 320px;
}

@media (min-width: 768px) {
  .modal {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    /* align-items: center; */

    top: 50%;
    left: 50%;

    width: 400px;
    height: 450px;

    transform: translate(-50%, -50%);
  }

  .modal__header {
    margin: 10px 0 0 30px;
    
    align-self: baseline;
    order: 0;
  }

  .modal__rules {
    width: 340px;

    margin: 0 auto;
    padding-bottom: 50px;

    order: 2;
    align-self: center;
  }
}

